# onomatopoeiaThenRun

./: README.md
AnimalLibrary/: CMakeLists.txt  runTests.sh
AnimalLibrary/src/: CMakeLists.txt
AnimalLibrary/src/Animal/: Animal.hpp  CMakeLists.txt
AnimalLibrary/src/Cat/: Cat.hpp
AnimalLibrary/src/Dog/: CMakeLists.txt
AnimalLibrary/src/Human/: CMakeLists.txt  Human.cpp  Human.hpp
AnimalLibrary/test/: AnimalTest.cpp
src/: CMakeLists.txt
src/Animal/: Animal.cpp  Animal.hpp
src/Ant/: Ant.cpp  Ant.hpp  CMakeLists.txt
src/Cat/: CMakeLists.txt  Cat.cpp
src/Dog/: Dog.cpp  Dog.hpp
test/: AnimalTest.cpp  CMakeLists.txt
